--- a/skaia/src/components/ViewThreadMeta.css
+++ b/skaia/src/components/ViewThreadMeta.css
@@ -12,9 +12,19 @@
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 .view-thread-meta-container {
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
+  /* flex-direction: row !important; */
+  /* gap: 0.1rem; */
+  padding: 0.1rem;
+  /* border-radius: 10px; */
+}
+
+@media (max-width: 1400px) {
+  .view-thread-meta-container {
+    display: flex !important;
+    flex-direction: row !important;
+    flex-wrap: wrap !important;
+    /* gap: 0.5rem; */
+  }
 }
 
 .view-thread-meta-card {
