--- a/skaia/src/pages/view-thread/index.css
+++ b/skaia/src/pages/view-thread/index.css
@@ -12,7 +12,7 @@
 
 .view-thread-page-comments {
   width: 100%;
-  background-color: var(--bg-color);
+  /* background-color: var(--bg-color); */
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
